--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Board of Directors
                 %p Our board of directors has a wide variety of experience and expertise. Of our 10 members, six have significant experience in education and academics. We also have several board members with strong experience in finance, development, governance, and community relations.
