--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span5#panel-left
+        .span5.panel#panel-left
             .content
                 %h4
                     Research, Internships and Teaching Experience at High Performing Schools
@@ -82,7 +82,7 @@
                         %small John Wayne Elementary (PS 380), Brooklyn, NY
                     %li
                         %small Zenith Academy, Houston, TX
-        .span7#panel-right
+        .span7.panel#panel-right
             .content
                 %h2 Our History
                 %p
