--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -1,9 +1,9 @@
 .container
     .row
-        .span4#panel-left
+        .span4.panel#panel-left
             .content
                 %img{:src => asset_path('about/partners.jpg')}
-        .span8#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Our Partners
                 %p.lead We are currently partnering with several preschools in order to help bridge the gap and provide our students with a smoother transition from preschool to kindergarten.
