--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -1,9 +1,9 @@
 .container
     .row
-        .span5#panel-left
+        .span5.panel#panel-left
             .content
                 %img{:src => asset_path('contact/teach.jpg')}
-        .span7#panel-right
+        .span7.panel#panel-right
             .content
                 %h2 Apply to Teach
                 %p.lead
