--- a/app/views/contact/schedule_a_visit.haml
+++ b/app/views/contact/schedule_a_visit.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span4#panel-left
+        .span4.panel#panel-left
             .content
                 %h3 Get in Touch
                 %p To schedule a visit, please contact:
@@ -8,7 +8,7 @@
                     %p Rick Campion
                     %span rickcampion@prodeoacademy.org
                     %span 612.559.4881
-        .span8#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Schedule a Visit
                 .row
