--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -1,9 +1,9 @@
 .container
     .row
-        .span4#panel-left
+        .span4.panel#panel-left
             .content
                 %img{:src => asset_path('contact/volunteer.jpg')}
-        .span8#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Volunteer
                 %p.lead If you are inspired to help close the achievement gap for our students, join us as a volunteer.
