--- a/app/views/results/achievement_gap.haml
+++ b/app/views/results/achievement_gap.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Achievement Gap
                 %p.lead The African American Leadership Forum identifies five gaps that lead to underachievement.
