--- a/app/views/results/results.haml
+++ b/app/views/results/results.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Meaningful and Measurable Results
                 .row
