--- a/app/views/student_life/academics.haml
+++ b/app/views/student_life/academics.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span4#panel-left
+        .span4.panel#panel-left
             .content
                 %h3 Key features of a Prodeo Education
                 %ul
@@ -15,7 +15,7 @@
                     %li Respect
                     %li Compassion
                     %li Integrity
-        .span8#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Academics
                 %p.lead Prodeo Academy is committed to providing a meaningful, individualized, joyful learning experience for every student.
