--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Community Meetings
                 %p Every Friday, the students and staff gather in the gym from 12:20pm-12:50pm for Community Meeting to celebrate the week.
