--- a/app/views/about/who_we_are.haml
+++ b/app/views/about/who_we_are.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Who We Are
                 %p.center
