--- a/app/views/approach/vision.haml
+++ b/app/views/approach/vision.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Our Vision
                 .row
