--- a/app/views/contact/enroll_your_child.haml
+++ b/app/views/contact/enroll_your_child.haml
@@ -1,10 +1,10 @@
 .container
     .row
-        .span4#panel-left
+        .span4.panel#panel-left
             .content
                 %h3 Sidebar Content
                 %p
-        .span8#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Enroll Your Child
                 %p This page isn't ready yet!
