Fix nav flowing over

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,7 +40,7 @@
                                     Results
                                     %span.caret
                                 = submenu(["Achievement Gap", "Our Results"], "Results")
-                            %li.dropdown-submenu
+                            %li.dropdown-submenu.pull-right
                                 %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                     Contact Us
                                     %span.caret
