--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -6,8 +6,8 @@
         .span8.panel#panel-right
             .content
                 %h2 Our Partners
-                %p.lead We are currently partnering with several preschools in order to help bridge the gap and provide our students with a smoother transition from preschool to kindergarten.
-                %p.mini-lead We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
-                %p.mini-lead Furthermore, community resources have been an important connection.
-                %p.mini-lead We look to continue to develop partnerships that help us support our students and families and close the gap.
+                %p We are currently partnering with several preschools in order to help bridge the gap and provide our students with a smoother transition from preschool to kindergarten.
+                %p We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
+                %p Furthermore, community resources have been an important connection.
+                %p We look to continue to develop partnerships that help us support our students and families and close the gap.
                 = render :partial => "_partials/partners"
