--- a/app/views/approach/core_values.haml
+++ b/app/views/approach/core_values.haml
@@ -3,7 +3,7 @@
         .span12.panel#panel-main
             .content
                 %h2 Our Core Values
-                .row
+                .row-fluid
                     .span3
                         %blockquote.lead Knowledge
                         %blockquote.lead Conscientiousness
@@ -20,6 +20,6 @@
                         %p In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.
                         %p It is extremely important to prepare our students for success in school, as well as in their personal and future professional life. Building a foundation together with families, Prodeo Academy students and staff honor and embrace a learning environment founded upon five core values.
                         %br
-                .row
+                .row-fluid
                     .span12
                         %img{:src => asset_path('approach/core_values.jpg')}
