--- a/app/views/approach/family_partnership.haml
+++ b/app/views/approach/family_partnership.haml
@@ -3,7 +3,7 @@
         .span12.panel#panel-main
             .content
                 %h2 Family Partnerships
-                .row
+                .row-fluid
                     .span7
                         %p.lead Family support is critical to a child's success in school.
                         %p At Prodeo Academy we understand that we work in collaboration with families; we welcome every Prodeo Academy family to be an active participant in our school community.
