--- a/app/views/approach/vision.haml
+++ b/app/views/approach/vision.haml
@@ -3,7 +3,7 @@
         .span12.panel#panel-main
             .content
                 %h2 Our Vision
-                .row
+                .row-fluid
                     .span5
                         %p.center.lead
                             %i
