--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -9,7 +9,7 @@
                 %p The highlight of the meeting is the awarding of the Spirit Stick. It is awarded to the student whose actions during the week best embodied the Prodeo Academy values.
                 %p This scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting.
                 %h3 January Winners
-                .row
+                .row-fluid
                     .span12
                         %ul.thumbnails
                             %li.span3
@@ -23,7 +23,7 @@
                                     .caption
                                         %h4 Frida
                 %h3 December Winners
-                .row
+                .row-fluid
                     .span12
                         %ul.thumbnails
                             %li.span3
@@ -42,7 +42,7 @@
                                     .caption
                                         %h4 Damiyah
                 %h3 November Winners
-                .row
+                .row-fluid
                     .span12
                         %ul.thumbnails
                             %li.span3
@@ -57,6 +57,6 @@
                                         %h4 Maurice
                             %li.span3
                                 .thumbnail
-                                    %img{:src => placehold(300, 400)}
+                                    %img{:src => placehold(420, 420)}
                                     .caption
                                         %h4 Alan
