--- a/app/views/student_life/school_calendar.haml
+++ b/app/views/student_life/school_calendar.haml
@@ -3,7 +3,7 @@
         .span12.panel#panel-main
             .content
                 %h2 School Calendar
-                .row
+                .row-fluid
                     .span8
                         %p.lead Important dates
                         %table.table.table-bordered.table-striped.table-hover
