--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,8 +46,16 @@ html, body {
     width: 100%;
 }
 
+#logo {
+    padding-left: 10px;
+}
+
+#social, #nav {
+    margin-right: 10px;
+}
+
 #header {
-    padding: 20px;
+    padding-top: 20px;
     padding-bottom: 10px;
 }
 
@@ -279,7 +287,7 @@ ul, ol {
 #panel-left {
     background-color: #f7f7f7;
     z-index: -2;
-    margin-top: 19px;
+    margin-top: 29px;
 }
 
 #panel-right {
@@ -360,7 +368,7 @@ ul, ol {
    * COUNCIL
    *
    */
-.thumbnails#council li {
+.thumbnails.council li {
     height: 125px;
 }
 
