--- a/app/views/results/results.haml
+++ b/app/views/results/results.haml
@@ -3,7 +3,7 @@
         .span12.panel#panel-main
             .content
                 %h2 Meaningful and Measurable Results
-                .row
+                .row-fluid
                     .span7
                         %p We are excited about the tremendous growth our students have experienced since starting with us at the end of August. Less than 20% of our students came to us kindergarten ready, and after just over two months at Prodeo Academy, 85% of our scholars are on grade level and 62% of those are advanced.
                         %img{:src => asset_path('results/results.png')}
