--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -4,8 +4,7 @@
             .container
                 .carousel-caption
                     %h1 College Starts Here
-                    %p.lead Enroll your child today
-                    %a.btn.btn-large.btn-inverse{:href => "/about/who_we_are"} More info &raquo;
+                    %a.btn.btn-large.btn-inverse{:href => "/about/who_we_are"} Enroll your child today &raquo;
             - (1..15).to_a.shuffle.each_with_index do |i, j|
                 .item{:class => j == 0 ? 'active' : ''}
                     %img{:src => asset_path("index/#{i}.jpg")}
