Possibly add new student winners

--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -8,6 +8,15 @@
                 %h3 Spirit Stick
                 %p The highlight of the meeting is the awarding of the Spirit Stick. It is awarded to the student whose actions during the week best embodied the Prodeo Academy values.
                 %p This scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting.
+                %h3 February Winners
+                .row-fluid
+                    .span12
+                        %ul.thumbnails
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => asset_path('student_life/winners/feb/1.jpg')}
+                                    .caption
+                                        %h4 Georgio
                 %h3 January Winners
                 .row-fluid
                     .span12
@@ -57,6 +66,6 @@
                                         %h4 Maurice
                             %li.span3
                                 .thumbnail
-                                    %img{:src => placehold(420, 420)}
+                                    %img{:src => asset_path('student_life/winners/nov/3.jpg')}
                                     .caption
                                         %h4 Alan
