Add Amelia Ann Photography

--- a/app/views/_partials/_partners.haml
+++ b/app/views/_partials/_partners.haml
@@ -17,6 +17,8 @@
     %b Support from Coporations and Foundations
 %ul.unstyled
     %li
+        %i Amelia Ann Photography
+    %li
         %i Boston Scientific
     %li
         %i CH Robinson
