--- a/app/views/student_life/typical_day.haml
+++ b/app/views/student_life/typical_day.haml
@@ -73,3 +73,4 @@
                             %td 3:45
                             %td
                             %td Dismissal
+                %img{:src => asset_path('student_life/typical_day.jpg')}
