Update photos, history page

--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -91,7 +91,7 @@
                 %p
                     As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
                     %i all families have the same platform for future success. 
-                %p Prodeo Academy opens its doors in Fall 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
+                %p Prodeo Academy opened its doors in Fall 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
                 %h2 The unique foundations of Prodeo Academy:
                 %ul.unstyled
                     %li
